--- a/exemple_de_set.env
+++ b/exemple_de_set.env
@@ -1,12 +1,12 @@
-OWNER_NAME="TimnasaTech"
+OWNER_NAME="Ishaq Ibrahim"
 PREFIX="."
 PUBLIC_MODE='non'
 AUTO_READ_STATUS="non"
 AUTO_DOWNLOAD_STATUS="oui"
 BOT_NAME= "TIMNASA_TMD1"
 IMAGE_MENU= "https://static.animecorner.me/2023/08/op2.jpg"
-NUMERO_OWNER= "255784766591"
-OWNER_NAME= "᚛TimnasaTech᚜"
+NUMERO_OWNER= "254741819582"
+OWNER_NAME= "᚛Ishaq Ibrahim ᚜"
 DATABASE_URL= ""
 WARN_COUNT= "3"
 OPENAI_API_KEY= ""
